--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 Python学习笔记：2024 年寒假.pdf
+编程应用练习/Scoop_MyBucket/_MyBucket_/*
+编程应用练习/Scoop_MyBucket/_MyBucket_
+编程应用练习/Scoop_MyBucket/_MyBucket_Cache_/*
+编程应用练习/Scoop_MyBucket/_MyBucket_Cache_
