--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
     },
-    "python.formatting.provider": "none"
+    "python.formatting.provider": "none",
+    "cmake.configureOnOpen": false,
+    "files.associations": {
+        "iostream": "cpp"
+    },
+    "Codegeex.CompletionModel": "CodeGeeX Pro[Beta]"
 }
