--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ StarCoders/MyCode.py
 编程应用练习/Scoop_MyBucket/_MyBucket_
 编程应用练习/Scoop_MyBucket/_MyBucket_Cache_/*
 编程应用练习/Scoop_MyBucket/_MyBucket_Cache_
+编程应用练习/拆分动态照片/_Output_/*
