提取公共函数到函数库

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ StarCoders/MyCode.py
 编程应用练习/Scoop_MyBucket/_MyBucket_Cache_/*
 编程应用练习/Scoop_MyBucket/_MyBucket_Cache_
 编程应用练习/拆分动态照片/_Output_/*
+编程应用练习/03_拆分试卷/Test_A4.pdf
+编程应用练习/02_拆分动态照片/_Output_/20230612_161417_Video.mp4
+编程应用练习/02_拆分动态照片/_Output_/20230612_161417_Photo.jpg
