--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python 调试程序: 下载教材.py",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/编程应用练习/下载教材/下载教材.py",
+            "console": "integratedTerminal",
+            "args": [
+                "8b9c7052-add4-4744-ab04-69d6c180d5d9",
+                "义务教育教科书·语文七年级上册"
+            ]
+        },
+        {
             "name": "Python 调试程序: 当前文件",
             "type": "debugpy",
             "request": "launch",
@@ -17,7 +28,9 @@
             "request": "launch",
             "program": "${workspaceFolder}/编程应用练习/03_拆分试卷/拆分试卷.py",
             "console": "integratedTerminal",
-            "args": ["Test.pdf"],
+            "args": [
+                "Test.pdf"
+            ],
         }
     ]
 }
