改进壁纸备份2，开始拆分动态照片2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "vector": "cpp",
         "fstream": "cpp"
     },
-    "Codegeex.CompletionModel": "CodeGeeX Pro[Beta]"
+    "Codegeex.CompletionModel": "CodeGeeX Pro[Beta]",
+    "marscode.chatLanguage": "cn"
 }
